--- a/labay_spark_styles.css
+++ b/labay_spark_styles.css
@@ -36,7 +36,7 @@ h3 {
     font-size: 24px;
 }
 
-.grid-container {
+#grid-container {
     display: grid;
     grid-template-columns: 1.5fr 5fr;
 }
@@ -67,6 +67,15 @@ nav a:hover {
     color: #8c1d40
 }
 
+main {
+    background-color: #fff;
+    padding: 24px;
+}
+
+main a {
+    color: #8c1d40;
+    font-weight: bold;
+}
 p, q {
     color: #444;
 }
